--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -4,43 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@drawable/login_activity_background"
     tools:context="com.utsanonymous.profbotsanbotopentok.CallActivity">
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/frameLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
             android:id="@+id/subscriber_container"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" >
+            android:layout_width="@dimen/publisher_width"
+            android:layout_height="@dimen/publisher_height" />
 
-        </FrameLayout>
-
-        <SurfaceView
-            android:id="@+id/camera_surface_view"
+        <com.serenegiant.usb.widget.UVCCameraTextureView
+            android:id="@+id/camera_view"
             android:layout_width="@dimen/publisher_width"
             android:layout_height="@dimen/publisher_height"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="@dimen/publisher_right_margin"
-            android:layout_marginRight="@dimen/publisher_end_margin"
-            android:layout_marginBottom="@dimen/publisher_bottom_margin"
-            android:background="@color/publisher_border_color"
-            android:padding="@dimen/publisher_padding" />
+            android:background="@color/publisher_border_color" />
 
+    </LinearLayout>
 
-        <FrameLayout
-            android:id="@+id/publisher_container"
-            android:layout_width="@dimen/publisher_width"
-            android:layout_height="@dimen/publisher_height"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="@dimen/publisher_right_margin"
-            android:layout_marginRight="@dimen/publisher_end_margin"
-            android:layout_marginBottom="@dimen/publisher_bottom_margin"
-            android:background="@color/publisher_border_color"
-            android:padding="@dimen/publisher_padding" />
-
-    </FrameLayout>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="172dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/disconnect"
+        android:onClick="disconnectButton"
+        android:text="Disconnect"
+        android:textColor="@color/WHITE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
